[workspace]
members = [
    "mf-core",
    "mf-locus",
    "mf-research",
    "mf-qa0",
    "mf-kernel",
    "mf-registry",
    "mf-selector",
    "mf-cli",
    "mf-runtime",
    "mf-canon",
    "mf-atlas",
    "mf-cert",
    "mf-surfaces",
    "mf-qc0",
    "mf-qm0",
    "mf-qk0",
    "mf-bundle",
    "mf-policy",
    "mf-observe",
    "mf-admin",
    "mf-command",
    "mf",
    "mf-testkit",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
bincode = "1.3"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.perfopt]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.compact]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
