[workspace]
members = [
    "l64-core",
    "l64-locus",
    "l64-research",
    "l64-qa0",
    "l64-kernel",
    "l64-registry",
    "l64-selector",
    "l64-cli",
    "l64-runtime",
    "l64-canon",
    "l64-atlas",
    "l64-cert",
    "l64-surfaces",
    "l64-qc0",
    "l64-qm0",
    "l64-qk0",
    "l64-bundle",
    "l64-policy",
    "l64-observe",
    "l64-admin",
    "l64-command",
    "l64",
    "l64-testkit",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
bincode = "1.3"
hex = "0.4"
blake3 = "1.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.perfopt]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.compact]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
