[package]
name = "l64-admin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
l64-core = { path = "../l64-core" }
l64-locus = { path = "../l64-locus" }
l64-bundle = { path = "../l64-bundle" }
l64-command = { path = "../l64-command" }
l64-cert = { path = "../l64-cert" }
l64-atlas = { path = "../l64-atlas" }
l64-policy = { path = "../l64-policy" }
l64-observe = { path = "../l64-observe" }
l64-registry = { path = "../l64-registry" }
l64-surfaces = { path = "../l64-surfaces" }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "3.2"
