[package]
name = "l64-atlas"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
l64-core = { path = "../l64-core" }
l64-kernel = { path = "../l64-kernel" }
l64-registry = { path = "../l64-registry" }
l64-policy = { path = "../l64-policy" }
serde = { workspace = true }
thiserror = { workspace = true }
