[package]
name = "l64-qk0"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
l64-core = { path = "../l64-core" }
l64-qm0 = { path = "../l64-qm0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
