[package]
name = "l64-research"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
l64-core = { path = "../l64-core" }
l64-locus = { path = "../l64-locus" }
l64-cert = { path = "../l64-cert" }
