[package]
name = "mf-admin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
mf-core = { path = "../mf-core" }
mf-locus = { path = "../mf-locus" }
mf-bundle = { path = "../mf-bundle" }
mf-command = { path = "../mf-command" }
mf-cert = { path = "../mf-cert" }
mf-atlas = { path = "../mf-atlas" }
mf-policy = { path = "../mf-policy" }
mf-observe = { path = "../mf-observe" }
mf-registry = { path = "../mf-registry" }
mf-surfaces = { path = "../mf-surfaces" }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "3.2"
