[package]
name = "mf-bundle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
mf-core = { path = "../mf-core" }
mf-registry = { path = "../mf-registry" }
mf-surfaces = { path = "../mf-surfaces" }
