[package]
name = "mf-cert"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
mf-core = { path = "../mf-core" }
mf-locus = { path = "../mf-locus" }
mf-kernel = { path = "../mf-kernel" }
mf-registry = { path = "../mf-registry" }
mf-atlas = { path = "../mf-atlas" }
mf-runtime = { path = "../mf-runtime" }
mf-policy = { path = "../mf-policy" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mf-bundle = { path = "../mf-bundle" }
serial_test = "3.2"
