[package]
name = "mf-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
mf-core = { path = "../mf-core" }
mf-locus = { path = "../mf-locus" }
mf-research = { path = "../mf-research" }
mf-kernel = { path = "../mf-kernel" }
mf-command = { path = "../mf-command" }
mf-qa0 = { path = "../mf-qa0" }
mf-registry = { path = "../mf-registry" }
mf-selector = { path = "../mf-selector" }
mf-runtime = { path = "../mf-runtime" }
mf-canon = { path = "../mf-canon" }
mf-atlas = { path = "../mf-atlas" }
mf-cert = { path = "../mf-cert" }
mf-surfaces = { path = "../mf-surfaces" }
mf-bundle = { path = "../mf-bundle" }
mf-policy = { path = "../mf-policy" }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
