[package]
name = "mf-observe"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
mf-core = { path = "../mf-core" }
mf-locus = { path = "../mf-locus" }
mf-bundle = { path = "../mf-bundle" }
mf-cert = { path = "../mf-cert" }
mf-atlas = { path = "../mf-atlas" }
mf-policy = { path = "../mf-policy" }
