[package]
name = "mf-qk0"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
mf-core = { path = "../mf-core" }
mf-qm0 = { path = "../mf-qm0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
