[package]
name = "mf-research"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
mf-core = { path = "../mf-core" }
mf-locus = { path = "../mf-locus" }
mf-cert = { path = "../mf-cert" }
